Refactor image processing and add background timing logic
Updated string resources for more natural emotion labels. Introduced timing constants for better control of background processes and improved logging for error handling. Removed deprecated code and unused `FrameAnalyzer` class to enhance maintainability.

--- a/EmotionalFaces/app/src/main/res/values/strings.xml
+++ b/EmotionalFaces/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">EmotionalFaces</string>
     <string name="take_picture">Take Picture</string>
     <string name="process_image">Process Image</string>
-    <string name="emotion_detected">Emotion detected: </string>
+    <string name="emotion_detected">I\'m feeling</string>
 </resources>
